syntax = "proto3";
package jwtrpcdeclare;
option go_package = "jwtrpcdeclare";
service JwtService {
    // SignJSON 为JSON字符串签名
    rpc SignJSON (SignJSONRequest) returns (SignResponse){}
    // VerifyJSON 将token解析到的负载转码为JSON字符串返回
    rpc VerifyJSON (VerifyRequest) returns (VerifyJSONResponse){}
}
enum Algo {
    HS256 = 0;
    RS256 = 1;
}

message SignJSONRequest {
    Algo algo = 1;
    bytes payload = 2;
    string aud = 3;
    string iss= 4; 
    int64 exp = 5;
}
message VerifyRequest {
    Algo algo = 1;
    string token = 2;
}

message StatusData {
    enum Status {
      SUCCEED = 0;
      ERROR = 1;
    }
    Status status =1;
    string msg=2;
}

message SignResponse {
    StatusData status = 1;
    string token = 2;
}

message VerifyJSONResponse {
    StatusData status = 1;
    bytes payload = 2;
}